implementaçao exibiçao rotapage

--- a/src/app/components/listagem/listagem.component.html
+++ b/src/app/components/listagem/listagem.component.html
@@ -1,7 +1,7 @@
 
-<section class="flex justify-center items-center">
-<div>
-  
+<section class="relative flex justify-center items-center">
+<div class="absolute left-8">
+  <app-rota></app-rota>
 </div>
   <app-pessoas *ngIf="tab===1"></app-pessoas>
   <app-planetas *ngIf="tab===2"></app-planetas>
