ajustesheader e  home implementaçao lista

--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,1 +1,6 @@
-<button class="shadow-3xl bg-white w-64 h-28 border rounded-md border-[#444444]">{{title}}</button>
+<button
+  (click)="rota(item.rota)"
+  class="shadow-3xl bg-white w-64 h-28 border rounded-md
+  border-[#444444]">
+  {{item.titulo}}
+</button>
