--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="relative w-full h-[95vh]  flex items-center justify-center">
     <div class="w-full gap-24 grid-rows-2 grid-cols-3 grid place-items-center">
 
-  <app-button  *ngFor="let item of buttons " [title]="item"></app-button>
+  <app-button  *ngFor="let item of buttons " [item]="item"></app-button>
 
 </div >
 <img 
