--- a/src/app/components/listagem/listagem.component.html
+++ b/src/app/components/listagem/listagem.component.html
@@ -1,6 +1,6 @@
 
-<section class="relative flex justify-center items-center">
-<div class="absolute left-8">
+<section >
+<div class="m-2 ml-10">
   <app-rota></app-rota>
 </div>
   <app-pessoas *ngIf="tab===1"></app-pessoas>
