ajustes rota component

--- a/src/app/components/rota/rota.component.html
+++ b/src/app/components/rota/rota.component.html
@@ -1,4 +1,7 @@
-<div class="flex gap-2"> 
-  <p>Página Inicial ></p>
+<div class="flex gap-2 items-center"> 
+  <p>Página Inicial </p>
+  <img 
+  class="w-2"
+  src="../../../assets/icons/chevron-right.svg" alt="">
   <p>{{rotaExibicao}}</p>
 </div>
