init pagina detalhes e melhoria exibiçao da rota

--- a/src/app/components/detalhes/detalhes.component.html
+++ b/src/app/components/detalhes/detalhes.component.html
@@ -4,10 +4,10 @@
   <li 
   
   class="cursor-pointer hover:scale-105 border-b border-[#DDDDDD] px-2 py-6 w-full  flex justify-between items-center"
-  *ngFor="let item of lista">
+  >
    <p 
    
-   class="text-sm">{{item.name?item.name:item.title}}</p> 
+   class="text-sm">test</p> 
     <img src="../../../assets/icons/chevron-right.svg" alt="">
   </li>
 </ul>
