--- a/src/app/components/listagem/listagem.component.html
+++ b/src/app/components/listagem/listagem.component.html
@@ -9,6 +9,6 @@
   <app-especies *ngIf="tab===4"></app-especies>
   <app-veiculos *ngIf="tab===5"></app-veiculos>
   <app-espaconaves *ngIf="tab===6"></app-espaconaves>
-
-  
-</section>
+<div class="px-56 py-20">
+  <app-detalhes [urlParts]="urlParts" *ngIf="tab===7"></app-detalhes>
+</div></section>
