--- a/src/app/components/listagem/pessoas/pessoas.component.html
+++ b/src/app/components/listagem/pessoas/pessoas.component.html
@@ -1,2 +1,5 @@
-<div class="px-56 py-20"><app-lista [lista]="lista" ></app-lista></div>
+<div class="px-56 py-20">
+  <app-lista [lista]="lista" ></app-lista>
+
+</div>
 
