ajuste detalhes rota

--- a/src/app/components/listagem/pessoas/pessoas.component.html
+++ b/src/app/components/listagem/pessoas/pessoas.component.html
@@ -1,5 +1,5 @@
 <div class="px-56 py-20">
-  <app-lista [lista]="lista" ></app-lista>
+  <app-lista (btnDetalhes)="btnDetalhes($event)" [lista]="lista" ></app-lista>
 
 </div>
 
