--- a/src/app/components/listagem/veiculos/veiculos.component.html
+++ b/src/app/components/listagem/veiculos/veiculos.component.html
@@ -1,1 +1,1 @@
-<div class="px-56 py-20"><app-lista [lista]="lista" ></app-lista></div>
+<div class="px-56 py-20"><app-lista  (btnDetalhes)="btnDetalhes($event)"[lista]="lista" ></app-lista></div>
