--- a/src/app/components/listagem/listagem.component.html
+++ b/src/app/components/listagem/listagem.component.html
@@ -3,12 +3,12 @@
 <div class="m-2 ml-10">
   <app-rota></app-rota>
 </div>
-  <app-pessoas *ngIf="tab===1"></app-pessoas>
-  <app-planetas *ngIf="tab===2"></app-planetas>
-  <app-filmes *ngIf="tab===3"></app-filmes>
-  <app-especies *ngIf="tab===4"></app-especies>
-  <app-veiculos *ngIf="tab===5"></app-veiculos>
-  <app-espaconaves *ngIf="tab===6"></app-espaconaves>
+  <app-pessoas (btnDetalhespage)="btnDetalhespage($event,'pessoas')" *ngIf="tab===1"></app-pessoas>
+  <app-planetas (btnDetalhespage)="btnDetalhespage($event,'planetas')" (btnDetalhespage)="btnDetalhespage($event,'pessoas')" *ngIf="tab===2"></app-planetas>
+  <app-filmes  (btnDetalhespage)="btnDetalhespage($event,'filmes')" *ngIf="tab===3"></app-filmes>
+  <app-especies (btnDetalhespage)="btnDetalhespage($event,'especies')" *ngIf="tab===4"></app-especies>
+  <app-veiculos (btnDetalhespage)="btnDetalhespage($event,'veiculos')" *ngIf="tab===5"></app-veiculos>
+  <app-espaconaves (btnDetalhespage)="btnDetalhespage($event,'espaconaves')" *ngIf="tab===6"></app-espaconaves>
 <div class="px-56 py-20">
-  <app-detalhes [urlParts]="urlParts" *ngIf="tab===7"></app-detalhes>
+  <app-detalhes  [urlDetalhes]="urlDetalhes" *ngIf="tab===7"></app-detalhes>
 </div></section>
