--- a/src/app/components/rota/rota.component.html
+++ b/src/app/components/rota/rota.component.html
@@ -2,13 +2,13 @@
   <p>Página Inicial </p>
   <img 
   class="w-2"
-  src="../../../assets/icons/chevron-right.svg" alt="">
+  src="../../../assets/chevron-right.svg" alt="">
   <p>{{rotaPrincipal}}</p>
   <div
     *ngIf="rotaDetalhes"
   class="flex gap-2 justify-center items-center">
     <img 
     class="w-2"
-    src="../../../assets/icons/chevron-right.svg" alt="">
+    src="../../../assets/chevron-right.svg" alt="">
     <p>{{rotaDetalhes}}</p></div>
 </div>
