--- a/src/app/components/lista/lista.component.html
+++ b/src/app/components/lista/lista.component.html
@@ -8,7 +8,7 @@
    <p (click)="detalhes(item.name?item.name:item.title,item.url)"
    
    class="text-sm">{{item.name?item.name:item.title}}</p> 
-    <img src="../../../assets/icons/chevron-right.svg" alt="">
+    <img src="../../../assets/chevron-right.svg" alt="">
   </li>
 </ul>
 
