--- a/src/app/components/detalhes/detalhes.component.html
+++ b/src/app/components/detalhes/detalhes.component.html
@@ -12,8 +12,9 @@
     <p>eye color: {{detalhes.eye_color}}</p>
     <p>gender: {{detalhes.gender}}</p>
   </div>
-  <div class=" border-b border-[#DDDDDD] px-2">
+  <div class="  px-2">
     <h1>Links Realcionados</h1>
+    <div class="border-b border-[#DDDDDD]"></div>
     <div class="flex">
     <div
     class="p-4"
@@ -49,4 +50,7 @@
 </div>
     </div>
   </div>
+</div>
+<div class="flex flex-col">
+
 </div>
