--- a/src/app/components/listagem/veiculos/veiculos.component.html
+++ b/src/app/components/listagem/veiculos/veiculos.component.html
@@ -1,1 +1,3 @@
-<div class="px-56 py-20"><app-lista  (btnDetalhes)="btnDetalhes($event)"[lista]="lista" ></app-lista></div>
+<div class="px-10 sm:px-56 py-20">
+  <app-lista (btnDetalhes)="btnDetalhes($event)" [lista]="lista"></app-lista>
+</div>
