--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,9 @@
 <div class="p-8">
-  <div 
-  [routerLink]="['/']"
-  class="flex pb-1 items-end justify-between border-b-2 border-[#444444]">
+  <div
+    [routerLink]="['/']"
+    class="flex pb-1 items-end justify-between border-b-2 border-[#444444]"
+  >
     <img src="../../../assets/jedi 1.svg" alt="logo" />
-    <h1 class="text-4xl" >{{ nameCandidato }}</h1>
+    <h1 class="text-xl sm:text-4xl">{{ nameCandidato }}</h1>
   </div>
 </div>
