ajsute loader e respansividade

--- a/src/app/components/detalhes/detalhes.component.html
+++ b/src/app/components/detalhes/detalhes.component.html
@@ -1,6 +1,6 @@
 <div
   *ngIf="detalhes"
-  class="sm:p-4 shadow-boxlist flex flex-col rounded-xl border border-[#777777 ]"
+  class="sm:p-4 p-2 shadow-boxlist flex flex-col rounded-xl border border-[#777777 ]"
 >
   <h1 class="text-4xl leading-14">{{ getName() }}</h1>
   <div class="p-4">
