--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,23 +6,23 @@
       <app-button *ngFor="let item of buttons" [item]="item"></app-button>
     </div>
     <img
-      class="absolute top-8 left-80 -z-10"
+      class="absolute top-0 -left-10 sm:top-8 sm:left-80 -z-10"
       src="../../../assets/starfighter 1.svg"
       alt=""
     />
     <img
-      class="absolute top-24 right-32 -z-10"
+      class="absolute top-20 sm:top-24 -right-80 sm:right-32 -z-10"
       src="../../../assets/space-station-moon-construction 2.svg"
       alt=""
     />
     <img
-      class="absolute bottom-32 right-80 w-44 rotate-180 -z-10"
+      class="absolute none sm:block sm:bottom-32 sm:right-80 w-44 rotate-180 -z-10"
       src="../../../assets/starfighter 1.svg"
       alt=""
     />
   </div>
   <img
-    class="absolute -bottom-2 left-28 -z-10"
+    class="absolute -bottom-2 -left-20 sm:left-28 -z-10"
     src="../../../assets/planet-ringed 1.svg"
     alt=""
   />
