--- a/src/app/components/lista/lista.component.html
+++ b/src/app/components/lista/lista.component.html
@@ -1,4 +1,5 @@
 <div
+*ngIf="loader |async"
   class="shadow-boxlist flex justify-center items-center rounded-xl border border-[#777777 ]"
 >
   <ul class="w-full px-4 sm:px-32 py-10">
