--- a/src/app/components/listagem/listagem.component.html
+++ b/src/app/components/listagem/listagem.component.html
@@ -26,7 +26,7 @@
     (btnDetalhespage)="btnDetalhespage($event, 'espaconaves')"
     *ngIf="tab === 6"
   ></app-espaconaves>
-  <div class="px-10 sm:px-56 py-20">
+  <div class="flex justify-center items-center px-10 sm:px-56 py-20">
     <app-detalhes *ngIf="tab === 7"></app-detalhes>
   </div>
 </section>
